Solved Error Of Map Not Seeing On Mobile

--- a/app/src/Components/ContactPage.css
+++ b/app/src/Components/ContactPage.css
@@ -16,7 +16,7 @@
     gap: 10px;
     padding: 20px 20px;
     width: 100%;
-    height: 60vh;
+
     overflow:scroll;
 }
 
@@ -45,13 +45,16 @@
         flex-direction: column;
         gap: 10px;
         padding: 20px 20px;
+        width: 100%;
+        
     }
     .map{
-     width: 100%;
+        width: 100%;
+        height: 300px;
     }
 
     .details{
-    width: 100%;
+        width: 100%;
     }
     
 
